Horizontal scroll fix

--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -15,7 +15,7 @@
 @media screen and (max-width: 990px) {
   .cover {
     max-width: 768px;
-    height: 480px;
+    height: auto;
   }
 }
 
